# uni_bi2

./: .gitignore  BI.cabal  todo.txt
BI/: Api.hs  Binary.hs  Common.hs  Directory.hs  Filters.hs  MD5.lhs  Queries.hs  Transformations.hs  Types.hs
BI/Explore/: Person.hs
csvs/: abgabe_analyse_kurs01_semester00.csv  abgabe_analyse_kurs01_semester01.csv  abgabe_analyse_kurs01_semester02.csv  abgabe_analyse_kurs01_semester03.csv  abgabe_analyse_kurs01_semester04.csv  abgabe_analyse_kurs02_semester01.csv  abgabe_analyse_kurs02_semester03.csv  abgabe_analyse_kurs02_semester04.csv  abgabe_analyse_kurs03_semester00.csv  abgabe_analyse_kurs03_semester02.csv  abgabe_analyse_kurs05_semester00.csv  abgabe_analyse_kurs06_semester04.csv  abgabe_analyse_kurs07_semester04.csv  abgabe_analyse_kurs08_semester04.csv  abgabe_assessment_pluses.csv  abgabe_assessment_pluses_courses.csv  abgabe_assessment_results.csv  abgabe_assessment_results_courses.csv  abgabe_courses.csv  abgabe_feedback.csv  abgabe_feedback_courses.csv  abgabe_person_lecturers.csv  code_analysis_by_user.csv  code_courses.csv  code_fact_table.csv  code_fact_table_person_unittests.csv  code_lecturers.csv  code_person_in_unittests_not_in_persons_xml.csv  code_person_lecturers.csv  code_person_lecturers_topicids.csv  code_persons.csv  code_states.csv  code_topic_person_assignments.csv  code_topics.csv  code_unittest_results_modified.csv  forum_99_entries.csv  forum_code.csv  forum_courses.csv  forum_entries.csv  forum_entries_courses.csv  (+3 more)
