name: BI
version: 1.0
Cabal-Version: >= 1.2
build-type: Simple

library
    build-depends:   base,
                     containers,
                     binary,
                     derive,
                     filepath,
                     directory,
                     hxt,
                     bytestring,
                     zlib,
                     parallel,
                     old-time,
                     unix,
                     MissingH,
                     json
    exposed-modules: BI.Types,
                     BI.Binary,
                     BI.Api,
                     BI.Common,
                     BI.Transformations,
                     BI.Queries
    ghc-options:     -Wall -O2 -threaded

executable biextract
    main-is: BI/Bin/Extract.hs
    ghc-options:     -Wall -O2 -threaded

executable ppxml
    main-is:       BI/Bin/ppxml.hs
    build-depends: haskell98
    ghc-options:     -Wall -O2 -threaded

executable bicode
    main-is: BI/Bin/Code.hs
    ghc-options:     -Wall -O2 -threaded

executable biforum
    main-is: BI/Bin/Forum.hs
    ghc-options:     -Wall -O2 -threaded

executable biabgabe
    main-is: BI/Bin/Abgabe.hs
    ghc-options:     -Wall -O2 -threaded

executable bihep
    main-is: BI/Bin/Hep.hs
    ghc-options:    -Wall -O2 -threaded

